test/fails/bad_functions/bad_name1.lgl
int f() { return 0; }

void main() {
    int f = 5;
}
